--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
        <div class="topnav" id: "topNav">
-            <a class="home" href="entrance.html">Home</a>
+            <a class="home" href="index.html">Home</a>
             <a href="forum.html">Acompanhe quem você segue</a>
             <a href="joboffer.html">Vagas disponíveis</a>
             <a href="signup">Cadastre-se</a>
