--- a/business.html
+++ b/business.html
@@ -14,7 +14,7 @@
              <a href="forum.html">Acompanhe quem você segue</a>
              <a href="joboffer.html">Vagas disponíveis</a>
              <a href="signup">Cadastre-se</a>
-             <a href="entrance.html">Quero um emprego!</a>
+             <a href="index.html">Quero um emprego!</a>
              <a class="help" href="help.html">Ajuda</a>
              <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                <i class="fa fa-bars"></i>
