--- a/joboffer.html
+++ b/joboffer.html
@@ -14,7 +14,7 @@
 
     <header>
             <div class="topnav" id: "topNav">
-                 <a class="home" href="entrance.html">Home</a>
+                 <a class="home" href="index.html">Home</a>
                  <a href="forum.html">Acompanhe quem você segue</a>
                  <a href="joboffer.html">Vagas disponíveis</a>
                  <a href="signup">Cadastre-se</a>
