--- a/business.html
+++ b/business.html
@@ -12,8 +12,8 @@
         <div class="topnav" id: "topNav">
              <a class="home" href="business.html">Home</a>
              <a href="forum.html">Acompanhe quem você segue</a>
-             <a href="joboffer.html">Vagas disponíveis</a>
-             <a href="index.html">Quero um emprego!</a>
+             <a href="employees.html">Quero Contratar!</a>
+             <a href="entrance.html">Quero um emprego!</a>
              <a class="help" href="help.html">Ajuda</a>
              <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                <i class="fa fa-bars"></i>
