Adiciona conteúdo do footer e novo css

--- a/business.html
+++ b/business.html
@@ -6,18 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TecnoWomen: O site de Networking feminino</title>
     <link rel="stylesheet" href="entrance.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
         <div class="topnav" id: "topNav">
              <a class="home" href="business.html">Home</a>
              <a href="forum.html">Acompanhe quem você segue</a>
-             <a href="employees.html">Quero Contratar!</a>
-             <a href="entrance.html">Quero um emprego!</a>
+             <a href="employees.html">Quero Contratar</a>
+             <a href="index.html">Quero um emprego!</a>
              <a class="help" href="help.html">Ajuda</a>
-             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-               <i class="fa fa-bars"></i>
-             </a>
              <div class="login-container">
                <form action="">
                  <input type="text" placeholder="Usuário" name="username">
@@ -37,7 +35,7 @@
             </section>
             <script type="text/javascript" src="employees.js"></script>
           </div>
-        <a href="#" class="next">Publicar vaga &raquo;</a>
+        <a href="#" onclick="alertFunction()" class="next">Publicar vaga &raquo;</a>
       </div>
       <div class="card">
         <div class="container">
@@ -47,11 +45,14 @@
             </section>
             <script type="text/javascript" src="business.js"></script>
           </div>
-        <a href="#" class="next">Acesse o fórum &raquo;</a>
+        <a href="forum.html" class="next">Acesse o fórum &raquo;</a>
       </div>
 
-<div class="footer">
-    <p>Footer</p>
-  </div>
+      <div class="footer">
+        <h4>Contate-nos:</h4>
+        <a href="https://www.facebook.com/programaria/?locale=pt_BR" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/programaria?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="fa fa-twitter"></a>
+      <h5>Projeto Desenvolvido por Priscila Araújo para Programaria</h5>
+      </div>
 </body>
 </html>
