Adiciona icones nos footers

--- a/forum.html
+++ b/forum.html
@@ -6,7 +6,9 @@
 
     <title>TecnoWomen: O site de Networking feminino</title>
 
-    <link rel="stylesheet" href="entrance.css">
+    <link rel="stylesheet" href="list.css">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -19,9 +21,6 @@
                  <a href="joboffer.html">Vagas disponíveis</a>
                  <a href="business.html">Sou empresa</a>
                  <a class="help" href="help.html">Ajuda</a>
-                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                   <i class="fa fa-bars"></i>
-                 </a>
                  <div class="login-container">
                    <form action="">
                      <input type="text" placeholder="Usuário" name="username">
@@ -39,6 +38,12 @@
 
     <script type="text/javascript" src="business.js"></script>
 
+    <div class="footer">
+      <h4>Contate-nos:</h4>
+      <a href="https://www.facebook.com/programaria/?locale=pt_BR" class="fa fa-facebook"></a>
+      <a href="https://twitter.com/programaria?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="fa fa-twitter"></a>
+    <h5>Projeto Desenvolvido por Priscila Araújo para Programaria</h5>
+    </div>
 </body>
 
 </html>
