--- a/help.html
+++ b/help.html
@@ -6,8 +6,9 @@
 
     <title>Ajuda</title>
 
-    <link rel="stylesheet" href="entrance.css">
+    <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="help.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -20,9 +21,6 @@
                  <a href="joboffer.html">Vagas disponíveis</a>
                  <a href="business.html">Sou empresa</a>
                  <a class="help" href="help.html">Ajuda</a>
-                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                   <i class="fa fa-bars"></i>
-                 </a>
                  <div class="login-container">
                    <form action="">
                      <input type="text" placeholder="Usuário" name="username">
@@ -41,31 +39,38 @@
     <script type="text/javascript" src="help.js"></script>
 
     <style>
-.panel {
-  padding: 0 18px;
-  background-color: white;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-}
-</style>
-
-<script>
-var acc = document.getElementsByClassName("accordion");
-var i;
-
-for (i = 0; i < acc.length; i++) {
-  acc[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var panel = this.nextElementSibling;
-    if (panel.style.maxHeight) {
-      panel.style.maxHeight = null;
-    } else {
-      panel.style.maxHeight = panel.scrollHeight + "px";
+    .panel {
+      padding: 0 18px;
+      background-color: white;
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.2s ease-out;
     }
-  });
-}
-</script>
+    </style>
+
+    <script>
+    var acc = document.getElementsByClassName("accordion");
+    var i;
+
+    for (i = 0; i < acc.length; i++) {
+      acc[i].addEventListener("click", function() {
+        this.classList.toggle("active");
+        var panel = this.nextElementSibling;
+        if (panel.style.maxHeight) {
+          panel.style.maxHeight = null;
+        } else {
+          panel.style.maxHeight = panel.scrollHeight + "px";
+        }
+      });
+    }
+    </script>
+
+  <div class="footer" style="position: fixed">
+    <h4>Contate-nos:</h4>
+    <a href="https://www.facebook.com/programaria/?locale=pt_BR" class="fa fa-facebook"></a>
+    <a href="https://twitter.com/programaria?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="fa fa-twitter"></a>
+  <h5>Projeto Desenvolvido por Priscila Araújo para Programaria</h5>
+  </div>
 </body>
 
 </html>
