altera index.html

--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
 <body>
     <header>
        <div class="topnav" id: "topNav">
-            <a class="home" href="index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="forum.html">Acompanhe quem você segue</a>
             <a href="joboffer.html">Vagas disponíveis</a>
             <a href="business.html">Sou empresa</a>
-            <a class="help" href="help.html">Ajuda</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-              <i class="fa fa-bars"></i>
-            </a>
+            <a href="help.html">Ajuda</a>
             <div class="login-container">
               <form action="">
                 <input type="text" placeholder="Usuário" name="username">
@@ -40,7 +37,7 @@
         </section>
         <script type="text/javascript" src="joboffer.js"></script>
       </div>
-      <a href="#joboffers" class="next">Procurar outras vagas &raquo;</a>
+      <a href="joboffer.html" class="next">Procurar outras vagas &raquo;</a>
       </div>
       <div class="card">
         <div class="container">
@@ -50,12 +47,13 @@
         </section>
         <script type="text/javascript" src="business.js"></script>
       </div>
-      <a href="#forum" class="next">Ver mais &raquo;</a>
+      <a href="forum.html" class="next">Ver mais &raquo;</a>
       </div>
     <div class="footer">
         <h4>Contate-nos:</h4>
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
+        <a href="https://www.facebook.com/programaria/?locale=pt_BR" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/programaria?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="fa fa-twitter"></a>
+      <h5>Projeto Desenvolvido por Priscila Araújo para Programaria</h5>
       </div>
 </body>
 </html>
