Altera titulo do segundo car de entrance

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <div class="card">
         <div class="container">
-            <h3><b>Veja as últimas novidades das empresas que você segue!</b></h3>
+            <h3><b>Acompanhe quem você segue</b></h3>
             <p>Veja postagens de quem você segue e interaja com outras mulheres e empresas!</p>
         <section id="conteudo" class="section">
         </section>
