Altera titulo do segundo card de business

--- a/business.html
+++ b/business.html
@@ -39,7 +39,7 @@
       </div>
       <div class="card">
         <div class="container">
-            <h3><b>Poste as conquistas da sua empresa no fórum!</b></h3>
+          <h3><b>Acompanhe quem você segue</b></h3>
             <p>Veja postagens de quem você segue e interaja com possíveis contratadas e faça parcerias com empresas!</p>
             <section id="conteudo" class="section">
             </section>
